# aoc

./: README.md
.devcontainer/: devcontainer.json
15/aoc15-hs/: aoc15-hs.cabal
15/aoc15-hs/app/: Main.hs
15/aoc15-hs/src/: Day01.hs  Day02.hs  Lib.hs
22/aoc22-clj/: project.clj
22/aoc22-clj/src/aoc22_clj/: core.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  util.clj
22/aoc22-clj/test/aoc22_clj/: core_test.clj  day01_test.clj
