cabal-version: 2.4
name:          aoc15-hs
version:       1.0.0
synopsis:      Advent of Code 2015 Solutions, in Haskell.
homepage:      https://github.com/anntnzrb/aoc

license:      GPL-3.0-or-later
license-file: LICENSE
author:       anntnzrb
maintainer:   anntnzrb@protonmail.com

library
    exposed-modules:
        Lib,
        Day01,
        Day02
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0

executable aoc15-hs
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        aoc15-hs
